--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,16 @@ charset-normalizer==2.0.9
 colorama==0.4.3
 cryptography==36.0.1
 distlib==0.3.4
+dj-database-url==0.5.0
 Django==4.0
+django-heroku==0.0.0
 docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
 filelock==3.4.2
 future==0.16.0
+gunicorn==20.1.0
 idna==3.3
 jmespath==0.10.0
 jsonschema==3.2.0
@@ -40,3 +43,4 @@ urllib3==1.26.7
 virtualenv==20.13.0
 wcwidth==0.1.9
 websocket-client==0.59.0
+whitenoise==5.3.0
